--- a/sys/main.html
+++ b/sys/main.html
@@ -350,6 +350,11 @@
 						<div class="widget-area-2  lochana-box-shadow">
 							<h3 class="widget-title">库存情况</h3>
 							<div class="table-responsive">
+								<label style="display:block;float:left;margin-left:150px;">
+									按商业公司搜索:
+									<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="storm" id="depNa" onblur="initTab('','2')">
+								</label>
+
 								<table class="table table-bordered" id="storm">
 
 								</table>
@@ -433,7 +438,7 @@
 	function initData(){
 		initrankingList()
 		// initRankList();
-		initTab();
+		initTab('','0');
 		initShowFast();
 		initspe();
 	}
@@ -501,6 +506,8 @@
 				{"sTitle":"当前库存", "mDataProp": "amount","sClass": "right", "bSortable": false, "sWidth": "200",editable:true},
 				{"sTitle":"单位", "mDataProp": "liter","sClass": "right", "bSortable": false, "sWidth": "200",editable:true},
 				{"sTitle":"采购价格", "mDataProp": "prize","sClass": "center", "bSortable": false, "sWidth": "200",editable:true,mRender:function (data,cell){
+				    data = parseFloat(data);
+				    data = data.toFixed(2);
 					return data;
 					}}
 			]
@@ -512,13 +519,18 @@
 
 
 
-	function initTab(){
+	function initTab(depNam,type){
+		if(type=='0'){
+			depNam="";
+		}else{
+			depNam = $("#depNa").val();
+		}
 		$('#storm').DataTable({
-			// "destroy":true,
+			"destroy":true,
 			"bDestroy":true,
 			"processing": false,
-			"searching": false,
-			// "serverSide": true,
+			"searching": true,
+			//"serverSide": true,
 			"bPaginate":true,
 			"bLengthChange":false,
 <!--			"edit":false,-->
@@ -546,6 +558,9 @@
 			"ajax": {//ajax请求数据源
 				"url": baseUrl+"/statistics/store",
 				dataType:"json",
+				data:{
+					depNam:depNam
+				},
 				xhrFields:{withCredentials:true},
 				contentType: "application/x-www-form-urlencoded",
 				async:false,
@@ -747,7 +762,11 @@
 				{"sTitle":"产品名称", "mDataProp": "meachName","sClass": "center", "bSortable": false, "sWidth": "350",editable:true},
 				{"sTitle":"规格", "mDataProp": "type","sClass": "center", "bSortable": false, "sWidth": "250",editable:true},
 				{"sTitle":"数量", "mDataProp": "amount","sClass": "right", "bSortable": false, "sWidth": "200"},
-				{"sTitle":"采购单价", "mDataProp": "shopPrize","sClass": "right", "bSortable": false, "sWidth": "200",editable:true},
+				{"sTitle":"采购单价", "mDataProp": "shopPrize","sClass": "right", "bSortable": false, "sWidth": "200",editable:true,mRender:function(data){
+					 data = parseFloat(data);
+				    data = data.toFixed(2);
+				    return data;
+				}},
 				{"sTitle":"批号", "mDataProp": "beach_num","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
 				{"sTitle":"包装量", "mDataProp": "type2","sClass": "right", "sWidth": "120"},
 				{"sTitle":"单位", "mDataProp": "liter","sClass": "center", "bSortable": false, "sWidth": "100",editable:true},
